@@ -43,6 +43,14 @@ EBUILD emacs-18.59-r2.ebuild 2426 RMD160 5aefcffe373d6f8cef4ee2da2155a9e87b1bf6d
 MD5 0ec47d4b56fb359319372542b5da2556 emacs-18.59-r2.ebuild 2426
 RMD160 5aefcffe373d6f8cef4ee2da2155a9e87b1bf6d9 emacs-18.59-r2.ebuild 2426
 SHA256 438e7afa0e9c99ad232e86b21503e18bbe65d79f9fd85f9adc86d11b5f4cd762 emacs-18.59-r2.ebuild 2426
+EBUILD emacs-18.59-r3.ebuild 2459 RMD160 79591e9f2fdcb171a8a135db84f8c8262689c617 SHA1 cb5d44427a36c2ceebda91aa79cab69916399928 SHA256 4ab6d87a986a189746d2b27546d760b960c30b715f84bb4de5c20631da6e7db9
+MD5 9114d057c9731baf1579cdbf722a1ea0 emacs-18.59-r3.ebuild 2459
+RMD160 79591e9f2fdcb171a8a135db84f8c8262689c617 emacs-18.59-r3.ebuild 2459
+SHA256 4ab6d87a986a189746d2b27546d760b960c30b715f84bb4de5c20631da6e7db9 emacs-18.59-r3.ebuild 2459
+EBUILD emacs-21.4-r10.ebuild 4774 RMD160 61956b80f75bd3893d802ceffa012d524d1c3c10 SHA1 88d8e043e60c4b8826d315b10f4ce422085c4cad SHA256 f28448ef740b50b0d2bbdf2ff17585cd7d5dd5767bedbe19b1adc71ca6bab14f
+MD5 ac49033c4e04e53c74feb549a3006ce1 emacs-21.4-r10.ebuild 4774
+RMD160 61956b80f75bd3893d802ceffa012d524d1c3c10 emacs-21.4-r10.ebuild 4774
+SHA256 f28448ef740b50b0d2bbdf2ff17585cd7d5dd5767bedbe19b1adc71ca6bab14f emacs-21.4-r10.ebuild 4774
 EBUILD emacs-21.4-r9.ebuild 4818 RMD160 3d4ee54a86411a6452c5342c2a9c355281635fc5 SHA1 2833621b23c90878e9d53dfed555b13c03c029d5 SHA256 2fb07eeacbe6d39f5aadf10886a2cf75c3fa579d137e2125c66c7b5a0ac4d627
 MD5 f1a3cea98f9638a1d344874cb5f75b7b emacs-21.4-r9.ebuild 4818
 RMD160 3d4ee54a86411a6452c5342c2a9c355281635fc5 emacs-21.4-r9.ebuild 4818
@@ -58,6 +66,12 @@ SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata
 MD5 6bd3531350f6b7c7682351e3dcf628d0 files/digest-emacs-18.59-r2 786
 RMD160 4d1f0a68da522f0bfbe8cebdb748c5f95ccc1c9d files/digest-emacs-18.59-r2 786
 SHA256 a5d7f43b69d68028793ee45424a1fce37e65dd63802310ebfda5ca85a62e9ba7 files/digest-emacs-18.59-r2 786
+MD5 6bd3531350f6b7c7682351e3dcf628d0 files/digest-emacs-18.59-r3 786
+RMD160 4d1f0a68da522f0bfbe8cebdb748c5f95ccc1c9d files/digest-emacs-18.59-r3 786
+SHA256 a5d7f43b69d68028793ee45424a1fce37e65dd63802310ebfda5ca85a62e9ba7 files/digest-emacs-18.59-r3 786
+MD5 6276bfdc37e540127a083cc6b979ac37 files/digest-emacs-21.4-r10 473
+RMD160 4f6aee1102af50b44f69f8de5714c901c5b6b15c files/digest-emacs-21.4-r10 473
+SHA256 8dec85daf40abb62a8c6a7232b067f0e5da524b222d2668f8db0f1df9dd7188e files/digest-emacs-21.4-r10 473
 MD5 6276bfdc37e540127a083cc6b979ac37 files/digest-emacs-21.4-r9 473
 RMD160 4f6aee1102af50b44f69f8de5714c901c5b6b15c files/digest-emacs-21.4-r9 473
 SHA256 8dec85daf40abb62a8c6a7232b067f0e5da524b222d2668f8db0f1df9dd7188e files/digest-emacs-21.4-r9 473
