@@ -1,0 +1,6 @@
+MD5 8f9d97cbd126121bd5d97e5e31168a87 emacs-21.4a.tar.gz 20403483
+RMD160 c312e739935b56d08783bbfe97992297a363cb8a emacs-21.4a.tar.gz 20403483
+SHA256 1d50ddae117c48d689a3d772e390569edccfdc22168be0112d2093bd2d7c3216 emacs-21.4a.tar.gz 20403483
+MD5 32938cb5a7505d995a1e835639d19707 leim-21.4.tar.gz 3291433
+RMD160 89e1108bfe06425a0d6b4d941f9c297551bafcca leim-21.4.tar.gz 3291433
+SHA256 db24946985dd644bfed18815d6e991dad27f8ab1fd5823dd6dc4eb8dcd04333b leim-21.4.tar.gz 3291433
